<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLiteTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">学生信息</string>
    <string name="name">姓名</string>
    <string name="id">学号</string>
    <string name="btnAdd">添加</string>
    <string name="btnDelText">删除</string>
    <string name="all">显示全部</string>

</resources>
